--- a/templates/personas/index.html
+++ b/templates/personas/index.html
@@ -1,26 +1,33 @@
 {% include 'header.html' %}
-<h2>Listado de Personas</h2>
-<a href="#" class="btn btn-success">Nuevo</a>
+
+<h2>Listado de personas</h2>
+
+<a href="{{ url_for('create') }}" class="btn btn-success">Nuevo</a>
+
 <table class="table table-striped table-hover">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Id</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Telefono</th>
+        <th scope="col">Fecha nac</th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
-        {% for  item in personas %}
+        {% for item in personas %}
       <tr>
         <th scope="row">{{ item['id'] }}</th>
         <td>{{ item['nombre'] }}</td>
         <td>{{ item['telefono'] }}</td>
         <td>{{ item['fecha_nac'] }}</td>
-       <td><a href="#" class="btn btn-warning">Editar</a></td>
-       <td><a href="#" class="btn btn-danger">Eliminar</a></td
+        <td><a href="/personas/edit/{{ item['id']}}" class="btn btn-warning" >Editar</a></td>
+        <td><a href="/personas/delete/{{ item['id'] }}" onclick="return(confirm('Esta seguro ???'))" class="btn btn-danger">Eliminar</a></td>
       </tr>
-      {% endfor %}
+        {% endfor %}
+
     </tbody>
   </table>
+
 {% include 'footer.html' %}
